# sources

./: README.md  index.json  index.min.json
.github/workflows/: build.yaml
sources/: ar.promanga-v1.aix  en.aurorascans-v1.aix  en.hivescans-v1.aix  en.magusmanga-v1.aix  en.mangabat-v7.aix  en.mangadistrict-v1.aix  en.mangafire-v1.aix  en.mangakakalot-v2.aix  en.manganato-v6.aix  en.manganelo-v2.aix  en.mangapark-v1.aix  en.mangasect-v1.aix  en.manhuagold-v1.aix  en.manhuaplusorg-v1.aix  en.nyxscans-v1.aix  en.tcbscans-v6.aix  en.vortexscans-v1.aix  en.weebcentral-v6.aix  es.eternalmangas-v1.aix  fr.bigsolo-v3.aix  ja.comicdays-v2.aix  ja.doctruyen5s-v2.aix  ja.manga1000-v1.aix  ja.mangamura-v1.aix  ja.raw1001-v1.aix  ja.rawkuro-v1.aix  ja.rawotaku-v1.aix  ja.shonenjumpplus-v2.aix  multi.mangadex-v10.aix  multi.suwayomi-v1.aix  ru.hentailib-v2.aix  ru.mangalib-v7.aix  ru.ranobelib-v1.aix  ru.slashlib-v2.aix  vi.cuutruyen-v2.aix  zh.boylove-v12.aix  zh.copymanga-v16.aix
sources/en.mangafire/: Cargo.toml  README.md
sources/en.mangafire/res/: filters.json  source.json
sources/en.mangafire/src/: lib.rs
