[package]
name = "en-mangafire"
version = "0.1.0"
edition = "2021"
description = "Aidoku extension for mangafire.to"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", version = "0.3.0", features = ["json"] }
chrono = { version = "0.4.30", default-features = false, features = ["alloc"] }
